2004-12-31  Gary Cramblitt (PhantomsDad)
        * In KTTSD, if user has not yet configured any Talkers, prompt user and if they click
          Yes, run KTTSMgr.  User has option to turn off prompt.
        * Activate kspeech::showDialog() method.

2004-12-30  Gary Cramblitt (PhantomsDad)
        * Set LANG and LC_CTYPE environment variables before starting subprocess in Epos and
          and Command plugins.  Fix encoding bug in Epos plugin.  Move common encoding routines
          to PluginProc.

2004-12-27  Gary Cramblitt (PhantomsDad)
        * Add encoding option to Festival Interactive Plugin.  When choosing a voice, default the
          encoding option based on voices file.
        * Add support for Polish Festival.

2004-12-21  Gary Cramblitt (PhantomsDad)
        * Require GStreamer 0.8.5 or above in configure.in.in.  SuSE 9.2 users have
          GStreamer 0.8.0, which causes KTTSMgr to immediately crash on startup.

2004-12-20  Gary Cramblitt (PhantomsDad)
        * kdenonbeta/kttsd moved to kdeaccessibility/kttsd.
        * kdenonbeta/kttsd/libktts moved to kdelibs/interfaces/kspeech.  libktts dropped.
        * kdenonbeta/app-plugins/khtml-plugin moved to kdebase/konqueror/kttsplugin.
        * kdenonbeta/app-plugins/kate-plugin moved to kdebase/kate/plugins/ktts.
        * kdenonbeta/app-plugins/katepart-plugin moved to kdebase/kate/plugin/katepartktts.

2004-12-19  Gary Cramblitt (PhantomsDad)
        * Change Festival voices from ini to xml format.  Permit translators to translate voice names.
        * Add "--enable-kttsd-gstreamer" option to configure, defaulting to no.
          Warn packagers not to distribute gstreamer in binary packages of kdeaccessibility as it
          creates unwanted dependencies.

2004-12-18  Gary Cramblitt (PhantomsDad)
        * Remove kcmkttsmgr.  Use kcmkttsd instead.

2004-12-14  Gary Cramblitt (PhantomsDad)
        * Under KDE 3.2, FestivalInt plugin automatically finding /usr/share/festival, rather