@@ -1,3 +1,3 @@
-SUBDIRS = stringreplacer
+SUBDIRS = stringreplacer xmltransformer
 
 kde_servicetypes_DATA = kttsd_filterplugin.desktop
